@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-27T00:33:11Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 14,
+  "timestamp" : "2022-04-27T08:07:25Z",
+  "count" : 3,
+  "count_minmax" : [ 0, 3 ],
+  "count_prev_day_inc" : 17,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
