@@ -1,6 +1,6 @@
 {
-  "count": 41,
-  "uniques": 5,
+  "count": 44,
+  "uniques": 6,
   "views": [
     {
       "timestamp": "2022-04-18T00:00:00Z",
@@ -20,6 +20,11 @@
     {
       "timestamp": "2022-04-26T00:00:00Z",
       "count": 22,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-27T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
