@@ -1,3 +1,9 @@
+2022-04-27T08:07:25Z:
+* notice: last 14d: all unq: 44 6
+* notice: prev accum: outdated-all outdated-unq / all unq: 283 55 / 324 62
+* notice: next accum: outdated-all outdated-unq / all unq: 283 55 / 327 63
+* notice: prev json diff // prev day diff: unq all: +1 +3 / -0 -0 // +1 +17 / -0 -0
+
 2022-04-27T00:33:11Z:
 * notice: last 14d: all unq: 41 5
 * notice: prev accum: outdated-all outdated-unq / all unq: 283 55 / 310 62
